PGOV-774 Fix facet label spacing (#2445)

--- a/web/themes/custom/cloudy/src/components/_form.scss
+++ b/web/themes/custom/cloudy/src/components/_form.scss
@@ -532,15 +532,18 @@ div.compact > div {
   }
 }
 
+.facet-item__count {
+  margin-left: $cloudy-space-1;
+}
+
 .facet-item label {
-  display: inline-block;
   margin: 0;
   font-weight: normal;
 }
 
 .facet-item input.facets-checkbox {
   position: absolute;
-  margin-top: 0.3rem;
+  margin-top: 0.4rem;
   margin-left: -$cloudy-space-5;
 }
 
